--- a/style.css
+++ b/style.css
@@ -38,8 +38,9 @@
   src: url("font/Norsebold.otf");
 }
 
-.otherfont{
+.altfont{
   font-family: "norse";
+  font-size: 30px;
 }
 
 #group{
@@ -68,22 +69,22 @@
 
 .contactimg{
   width: 100px;
-  display: inline;
+  margin-left: 14.3%;
 }
 
 .musicimg{
   width:100px;
+  margin-left: 90px;
 }
 
-.amusicimg{
-  height: 100px;
-}
-
-.about{
+.centertext{
   text-align: justify;
   text-align-last: center;
 }
 
-/*#logo{
-*/
-
+.alphaimg{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
