--- a/style.css
+++ b/style.css
@@ -8,16 +8,16 @@
 }
 
 .logo{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
   width: 15%;
 }
 
-.centerbuy{
+.center{
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+#buy{
   text-align: center;
 }
 
@@ -51,26 +51,14 @@
 
 #group{
   width: 50%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 #poster {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
   width: 35%;
 }
 
 .table{
   margin-left: 250px;
-}
-
-#videocenter{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .contactimg{
@@ -89,8 +77,5 @@
 }
 
 #cover{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
   width: 30%;
 }
