--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .logo{
-  display: grid;
+  display: block;
   margin-left: auto;
   margin-right: auto;
   width: 15%;
@@ -76,7 +76,12 @@
 
 .contactimg{
   width: 100px;
-  margin-left: 14.5%;
+  margin-left: 6.5%;
+}
+
+.contactimgl{
+  width: 100px;
+  margin-left: 26.5%;
 }
 
 .musicimg{
@@ -92,4 +97,15 @@
 
 #cover{
   width: 30%;
+}
+
+#arrow{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 5%;
+}
+
+#bigtext{
+  font-size: xx-large;
 }
